# aion_fastvm

./: .gitignore  CONTRIBUTORS.md  Makefile  README.md
bench/evm/: main.cpp
bench/fastvm/: Makefile  evm.h
eclipse/evmjit/: .cproject  .project
eclipse/evmjit-jni/: .cproject  .project
eclipse/jni/: .cproject  .project
eclipse/solidity/: .cproject  .project
fastvm/: Makefile
fastvm/bench/evm/: Makefile
fastvm/bench/fastvm/: Makefile
fastvm/jni/: org_aion_fastvm_FastVM.cpp  org_aion_fastvm_FastVM.h
fastvm/libevmjit/: Compiler.cpp  Instruction.h  JIT.cpp
include/: evm.h
java/: build.xml
java/src/org/aion/fastvm/: Callback.java  FastVM.java
java/src/org/aion/solidity/: Abi.java  CompilationResult.java  Compiler.java
java/src/org/aion/vm/: Constants.java  Decompiler.java  ExecutionContext.java  ExecutionResult.java  Instruction.java  PrecompiledContracts.java  TransactionExecutor.java  TransactionResult.java  VirtualMachine.java
java/test/org/aion/contract/: ContractUtils.java
java/test/org/aion/fastvm/: Benchmark.java  CacheTest.java  ContractTest.java  DoSBlockGasLimitTest.java  DoSUnexpectedThrowTest.java  DummyRepository.java  FastVMTest.java  MultiThreadTest.java  NrgCostTest.java  TestUtils.java
java/test/org/aion/solidity/: AbiTest.java  CompilerTest.java  SolidityTypeTest.java  WalletTest.java
java/test/org/aion/vm/: ExecutionContextTest.java  TransactionExecutorTest.java
jni/: org_aion_fastvm_FastVM.cpp
libevmjit/: BuildInfo.gen.h  Compiler.cpp  JIT.cpp  Optimizer.cpp  RuntimeManager.cpp  Utils.cpp
modFastVM/: build.gradle  build.xml  module-info.java  settings.gradle
modFastVM/native/linux/fastvm/: file.list
modFastVM/native/linux/solidity/: ct.sol  file.list  solc
modFastVM/src/: module-info.java
modFastVM/src/org/aion/fastvm/: AbstractExecutor.java  Callback.java  CapabilitiesProvider.java  Decompiler.java  ExecutionContext.java  ExternalStateForPrecompiled.java  FastVM.java  FastVirtualMachine.java  FastVmResultCode.java  FastVmTransactionResult.java  FvmConstants.java  FvmDataWord.java  FvmWrappedTransactionResult.java  IExternalCapabilities.java  IExternalStateForFvm.java  IFastVm.java  Instruction.java  SideEffects.java  SimpleFuture.java  TransactionExecutor.java  TransactionKind.java  TransactionResult.java
modFastVM/src/org/aion/solidity/: Abi.java  CompilationResult.java  Compiler.java  Constructor.java  Entry.java  Event.java  Fallback.java  Function.java  Param.java  SolidityType.java
modFastVM/src/org/aion/util/: ByteUtil.java  FvmNativeLoader.java  HexEncoder.java  HexUtil.java  TransactionResultUtil.java  TransactionUtil.java
modFastVM/src/org/aion/vm/: Constants.java  ExecutionContext.java  ExecutionHelper.java  ExecutionResult.java  Instruction.java  PrecompiledContracts.java  TransactionExecutor.java  TransactionResult.java  VirtualMachine.java
modFastVM/test/org/aion/: ByteArrayWrapper.java  ContractFactoryMock.java  ExternalCapabilitiesForTesting.java  ExternalStateForTesting.java  FastVmForTesting.java
modFastVM/test/org/aion/contract/: BenchmarkERC20.sol  BlockGasLimit.sol  Bytes32.sol  Call.sol  ContractUtils.java  Create.sol  D.sol  DefaultPayable.sol  FailedRefund.sol  Import.sol  LocalValDepth.sol  MultiFeatureContract.sol  Recursive.sol  Savings.sol  SolidityType.sol  Ticker.sol  Wallet.sol
modFastVM/test/org/aion/fastvm/: Benchmark.java  CacheTest.java  CallbackQueryTest.java  CallbackSelfDestructTest.java  CallbackStackTest.java  CallbackUnitTest.java  ContractTest.java  DoSBlockGasLimitTest.java  DoSUnexpectedThrowTest.java  DummyRepository.java  FastVMTest.java  FastVirtualMachineIntegTest.java  FastVirtualMachineUnitTest.java  InternalPrecompiledContractCallTest.java  InternalTransactionTest.java  MultiThreadTest.java  NrgCostTest.java  TestUtils.java  TestVMProvider.java  TrsTest.java
modFastVM/test/org/aion/precompiled/: IPrecompiled.java  PrecompiledFactoryForTesting.java  (+1 more)
scripts/: release.sh
solidity/: BuildInfo.h  CMakeLists.txt  Makefile  README.md
solidity/cmake/: EthBuildInfo.cmake  EthCompilerSettings.cmake  EthOptions.cmake
solidity/cmake/toolchains/: emscripten.cmake
solidity/libdevcore/: CMakeLists.txt  Common.h  JSON.h
solidity/libevmasm/: Assembly.cpp  CMakeLists.txt  CommonSubexpressionEliminator.cpp  Instruction.cpp  Instruction.h  SemanticInformation.cpp
solidity/libjulia/: CMakeLists.txt
solidity/libjulia/backends/evm/: EVMCodeTransform.cpp
solidity/libsolc/: CMakeLists.txt  libsolc.cpp
solidity/libsolidity/: CMakeLists.txt
solidity/libsolidity/analysis/: GlobalContext.cpp
solidity/libsolidity/ast/: ASTVisitor.h  Types.cpp  Types.h
solidity/libsolidity/codegen/: ArrayUtils.cpp  CompilerContext.cpp  CompilerUtils.cpp  ContractCompiler.cpp  ExpressionCompiler.cpp  LValue.cpp  LValue.h
solidity/libsolidity/interface/: CompilerStack.h  StandardCompiler.cpp
solidity/libsolidity/parsing/: Parser.cpp
solidity/scripts/: build_emscripten.sh
solidity/solc/: CommandLineInterface.cpp
solidity/tests/: main.cpp
solidity/tests/contracts/: testAionToken.sol  testBancor.sol  testBlake2b.sol  testLocalVar.sol  testTxHash.sol  testedvalidate.sol
tests/: main.cpp
(+55 files in other folders)
