set(sources
	analysis/ConstantEvaluator.cpp
	analysis/ConstantEvaluator.h
	analysis/DeclarationContainer.cpp
	analysis/DeclarationContainer.h
	analysis/DocStringAnalyser.cpp
	analysis/DocStringAnalyser.h
	analysis/GlobalContext.cpp
	analysis/GlobalContext.h
	analysis/NameAndTypeResolver.cpp
	analysis/NameAndTypeResolver.h
	analysis/PostTypeChecker.cpp
	analysis/PostTypeChecker.h
	analysis/ReferencesResolver.cpp
	analysis/ReferencesResolver.h
	analysis/SemVerHandler.cpp
	analysis/SemVerHandler.h
	analysis/StaticAnalyzer.cpp
	analysis/StaticAnalyzer.h
	analysis/SyntaxChecker.cpp
	analysis/SyntaxChecker.h
	analysis/TypeChecker.cpp
	analysis/TypeChecker.h
	ast/AST.cpp
	ast/AST.h
	ast/AST_accept.h
	ast/ASTAnnotations.cpp
	ast/ASTAnnotations.h
	ast/ASTForward.h
	ast/ASTJsonConverter.cpp
	ast/ASTJsonConverter.h
	ast/ASTPrinter.cpp
	ast/ASTUtils.cpp
	ast/ASTUtils.h
	ast/ASTVisitor.h
	ast/ExperimentalFeatures.h
	ast/Types.cpp
	ast/Types.h
	codegen/ArrayUtils.cpp
	codegen/ArrayUtils.h
	codegen/Compiler.cpp
	codegen/Compiler.h
	codegen/CompilerContext.cpp
	codegen/CompilerContext.h
	codegen/CompilerUtils.cpp
	codegen/CompilerUtils.h
	codegen/ContractCompiler.cpp
	codegen/ContractCompiler.h
	codegen/ExpressionCompiler.cpp
	codegen/ExpressionCompiler.h
	codegen/LValue.cpp
	codegen/LValue.h
	inlineasm/AsmAnalysis.cpp
	inlineasm/AsmAnalysis.h
	inlineasm/AsmAnalysisInfo.cpp
	inlineasm/AsmAnalysisInfo.h
	inlineasm/AsmCodeGen.cpp
	inlineasm/AsmCodeGen.h
	inlineasm/AsmData.h
	inlineasm/AsmDataForward.h
	inlineasm/AsmParser.cpp
	inlineasm/AsmParser.h
	inlineasm/AsmPrinter.cpp
	inlineasm/AsmPrinter.h
	inlineasm/AsmScope.cpp
	inlineasm/AsmScope.h
	inlineasm/AsmScopeFiller.cpp
	inlineasm/AsmScopeFiller.h
	interface/ABI.cpp
	interface/ABI.h
	interface/AssemblyStack.cpp
	interface/AssemblyStack.h
	interface/CompilerStack.cpp
	interface/CompilerStack.h
	interface/ErrorReporter.cpp
	interface/ErrorReporter.h
	interface/Exceptions.cpp
	interface/Exceptions.h
	interface/GasEstimator.cpp
	interface/GasEstimator.h
	interface/Natspec.cpp
	interface/Natspec.h
	interface/ReadFile.h
	interface/SourceReferenceFormatter.cpp
	interface/SourceReferenceFormatter.h
	interface/StandardCompiler.cpp
	interface/StandardCompiler.h
	interface/Version.cpp
	interface/Version.h
	parsing/DocStringParser.cpp
	parsing/DocStringParser.h
	parsing/Parser.cpp
	parsing/Parser.h
	parsing/ParserBase.cpp
	parsing/ParserBase.h
	parsing/Scanner.cpp
	parsing/Scanner.h
	parsing/Token.cpp
	parsing/Token.h
	parsing/UndefMacros.h
)

add_library(solidity ${sources})
target_link_libraries(solidity PUBLIC julia evmasm devcore ${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY})